<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MakeWish Online</string>
    <string name="app_update_default_title">App Update</string>
    <string name="app_update_default_description">Looks like you have an older\nversion of the app.\nPlease update to get latest\nfeatures and best experience.</string>
    <string name="app_update_positive_text">UPDATE NOW</string>
    <string name="contact">If you have any questions or suggestions about my App, do not hesitate to contact me. \n\nuniquebyofficial@gmail.com</string>
    <string name="android_content">Everybody needs a few extra bucks now and then.
        However, we’re not so foolish as to try to make you believe that you’ll earn a living sitting at home doing nothing.</string>
    <string name="admob">Admob is a mobile advertising company it\'s an Google products which is provides ads in the app</string>
    <string name="android_studio">What is Android Studio?</string>
    <string name="android_studio_content">Android Studio is the enverment for making Android apps development which is developed by google.
        \nIf you want make money with Android apps, first you need to developed Android apps.\n\nYou can download Android Studio from this link https://developer.android.com/studio

    </string>
    <string name="low_cost">If you want buy Android apps at low cost, you can buy form us.
        \n\nWe have 200+ Play store ready Android apps, you can double check to others marketplaces or developers how much lower cost you can get from us.
        \n\nEven we provides all services app making to upload on google play, if you want you can get it.

    </string>
    <string name="content">No matter if don\'t have any idea about Android platforms, we will teach you all of things.
        \n\nWe will provide all services which is need to make an app and publish on Play Store, and earn from Android Application.
        \n\nYou can learn how to make an application but it\'s a long process. You can learn from us, goto Course section and find which course you want do.
        \n\nYou can see many companies or freelancers, who are making the app by other developers and earn from it. Why you not?
        \n\nYou can\'t imagine, how much money you can generate by the android app.
        \n\nYou can double check to others marketplaces or developers how much lower cost you can get from us.
        \nEven until today, I don\'t think, anyone will give you support like us.
        If you buy from other developers or marketplaces you can get only the Android app at the high cost.
        Even if you want to upload google play store, you need to change many things like (Logo, Graphics, Package name, Integrate AdMob, and more).
        \n\nCheck Our All apps &amp; pricing which we provide for you, and you can see all the services, Click on (See Our All Apps &amp; Pricing) button below.
    </string>
    <string name="blog_content1">Can you make money blogging?  \n\nWhat are the various ways to make money from blogging?
        \n\nHow much can I earn?  \n\nCan I talk about my life and make money?
        \n\nWhat should I blog about to make money?
        \n\nThese are just some of the most common question bloggers at various level \(Beginners, Intermediate\)
        have and in this exclusive guide, I\’m helping you to answer all these questions.
        I will also show you some of the best ways to make money blogging that you can use in 2019 and the years to come.
    </string>
    <string name="blog_money">How to make money by Blogging</string>
    <string name="blog_h1">How Much Can You Earn From Blogging?</string>
    <string name="blog_earn_content">Whether you\’re looking to supplement your income with a little extra to
        pay for a few nice treats or create a blog that will support your lifestyle then you can pretty much
        make as much money as you like from blogging if you are prepared to put in the hard work.
        \n\nThere are lots of great stories out there of successful bloggers who make money blogging:
        \n\nFor example over the past couple of years, husband and wife team, Bjork and Lindsay at PinchofYum.com,
        a food and recipe blog, have built up a huge following and some months they have made nearly \$25k.
        \n\nAnother blogging couple, Yeison and Samantha, who run mytanfeet.com are making over $5k per month
        while they travel the world and share their photos and stories on their blog.
        \n\nI\’m not going to lie to you but it can take months even years before
        you might see a significant return on the time you invest in to starting a blog
        but that is why I have created this free guide so that you can be confident in
        taking the right steps to achieving your blogging goals.
        \n\nSo let’s start..
    </string>
    <string name="niche">How to Pick a Profitable Blog Niche?</string>
    <string name="niche_content1">This is the most critical step. Seriously.
        \n\nThere is no point in starting a blog that you want to make money from without a plan. There are thousands,
        even hundreds of niches out there.Some are broad and huge;
        some are small and virtually unknown. Some niches are easier to make money in than others.
        \n\nThis is why your research is important.
        \n\nA good place to start when you are picking a niche is to look at your own interests in Google.
        \n\nThink about niche select your niche or you can search on google \"how to select profitable blogging niche\" .
    </string>
    <string name="blogiing_m">What Will You Need to Make Money Blogging</string>
    <string name="make_blog_content">If you\’re planning to make money from blogging then
        it goes with out saying that you will need to make a blog.
        \n\nWhen anyone asks me about starting a professional money making blog I always recommend them to use
        self hosted WordPress as it\’s the best platform for bloggers. You can easily manage WordPress.
        \n\nIf you need WordPress blogging websites you can contact with us we will make for you at low cost,
        Even we will teach you how can you manage your blogging websites by wordpress.
        \n\nYou can check our demo blogging websites.
        \n\nClick on below button to see our demo sites &amp; pricing for make full ready blogging websites.
    </string>
    <string name="_1_get_a_blog">1. Get a Blog:</string>
    <string name="pricing">Demo &amp; Pricing Blogging Sites</string>
    <string name="make_content">2. Create Great Content:</string>
    <string name="blog_content">So now that you have built your blog you are ready to create some blog posts for your readers.
        \n\nThe reason this section is called \“Great Content\” is because your content really does need to be
        of a high standard. Everyday millions of blog posts are published on the internet and with so much competition
        for our limited attention spans you really have to be creating blog posts people are going to want to
        read and perhaps even share on social media or on their own blogs.
        \n\nMake sure your posts are:
        \n\n* Well formatted and look good with relevant images
        \n\n* Are in-depth and entertaining
        \n\n* Offer links to other posts to expand on points
    </string>
    <string name="audience">3. Build Up Your Audienc:e</string>
    <string name="audience_content">I started my first ever blog by writing on a consistent schedule about myself,
        my hobbies and interests. People found me via Google, Facebook, social media and my
        readership gradually grew over time to where it is today.
        \n\nOnce I had built up an audience, making money from blogging became an afterthought.
        \n\nWhen you have a large group of fans interested in what you have to say, the money will come. Trust me on that.
        \n\nThe hard part is finding and gathering your fans.
    </string>
    <string name="promote_your_blog">Promote your blog:</string>
    <string name="promote_content">No matter how great your articles are no one is going to know about them unless you take time to promote your blog.</string>
    <string name="seo">You need learn about SEO, you can get users from google search, you can\'t imagine how many users you get from google search engine</string>
    <string name="monitze_blog">Best Ways to Make Money from Your Blog – Ways To Monetize Your Blog</string>
    <string name="start_earning">So now that we have covered the basics of building up your blog and it’s following lets have a look at some different ways you can begin to monetize your blog and start earning.</string>
    <string name="affiliate_marketing">Affiliate Marketing:</string>
    <string name="affiliate_marketing_content">Affiliate marketing is a kind of performance-based marketing and a beast at monetizing your blog.
        With this form of marketing, business owners reward affiliates for each customer brought to the company
        through the affiliate\’s independent advertising endeavors.
        There are four key players in affiliate marketing:
        \n\n* the merchant
        \n\n* the network
        \n\n* the publisher
        \n\n* the customer
        \n\nAs a result of its increasing complexity, the affiliate marketing world has evolved to include a subset
        of players which includes specialized third party vendors, affiliate management agencies,
        and super-affiliates.
        \n\nAffiliate marketing works in conjunction with several other online advertising mechanisms.
        This is the case because affiliates will often use these platforms for marketing purposes.
        Some of the mechanisms include search engine optimization (SEO), e-mail marketing,
        paid search engine marketing (PPC-Pay Per Click), display advertising, and content marketing.
        At the same time, affiliates can also appropriate less traditional advertising methods.
        An example would be publishing reviews of services or products.
        \n\nIn many cases, affiliate marketing is confused with referral marketing.
        This is likely the case because both marketing methods involve the use of third parties
        who drive business to a retailer.
        \n\nIf you are planning to become an affiliate marketer then it might be a good idea to sign up to an
        affiliate network such as Shareasale or ClickBank in order to find offers to promote.
    </string>
    <string name="modern_ways_to_make_money_from_your_blog">Modern Ways To Make Money from Your Blog:</string>
    <string name="moni">There are various methods that you can use to monetize your blog.
        Depending upon your level of blogging and the kind of blog,
        you could pick the method that matches with your style.
        Do check the end of this article to get the answers to many important questions asked by bloggers like you.
    </string>
    <string name="adsnet">1. Ad Networks like AdSense,Media.net
        \n\n2. Direct Advertisements
        \n\n3. Affiliate marketing
        \n\n4. Paid reviews
        \n\n5. Sell your eBook
        \n\n6. Launch an Online Course
        \n\n7. Offer Online consulting \n\n8. Offer Services based on your skills</string>
    <string name="img">img</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_we_will_make_any_type_of_wordpress_site">Contact us we will make any type of WordPress Site</string>
</resources>