<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    tools:context=".Blogger">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/content"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:fontFamily="@font/neo_latina"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:text="@string/blog_money"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/blogging" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/opensense"
                android:textSize="15sp"
                android:textColor="#000"
                android:text="@string/blog_content1"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginTop="15sp"
                android:textStyle="bold"
                android:text="@string/blog_h1"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/blogmoney" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/blog_earn_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/content"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"
                android:text="@string/niche"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/niche" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/niche_content1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/opensense"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"
                android:text="@string/blogiing_m"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/_1_get_a_blog"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/make_blog_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/circle2"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/blogging"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="20sp"
            android:layout_height="70sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20sp"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginRight="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/pricing"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/content"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/opensense"
                android:textStyle="bold"
                android:text="@string/make_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/opensense"
                android:textSize="15sp"
                android:textColor="#000"
                android:text="@string/blog_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/content"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/opensense"
                android:textStyle="bold"
                android:text="@string/audience"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/audience_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/opensense"
                android:textStyle="bold"
                android:text="@string/promote_your_blog"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/promote_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"
                android:text="SEO:"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/seo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/content"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"
                android:text="@string/monitze_blog"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="10sp"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/start_earning"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"
                android:text="@string/affiliate_marketing"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="15sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/affiliate_marketing_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"
                android:text="@string/modern_ways_to_make_money_from_your_blog"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/moni"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:src="@drawable/way" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:fontFamily="@font/opensense"
                android:textColor="#000"
                android:text="@string/adsnet"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>