<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ddd"
    android:layout_height="match_parent"
    tools:context=".Order_site">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/content"
            android:orientation="vertical"
            android:padding="10sp"
            android:layout_margin="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/opensense"
                android:text="@string/contact_us_we_will_make_any_type_of_wordpress_site"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:background="@drawable/circle3"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:id="@+id/about"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="70sp"
                    android:padding="5sp"
                    android:layout_gravity="center"
                    android:src="@drawable/wp"
                    android:contentDescription="@string/img" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:layout_marginRight="20sp"
                    android:fontFamily="@font/opensense"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/contact_us"
                    android:layout_marginEnd="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>